# llm-chat

./: .dockerignore  .env.example  .env.local.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.md  docker-compose.yml  reset.ps1  reset.sh  test-all-sessions.js  test-control-flow.js  test-linux-4session.js  test-linux-chat.js  test-linux-smoke.js  test-linux-watch.js  test-list.js  test-manager.js  test-qa-stream.js
.github/workflows/: ci.yml  deploy.yml
admin-api/: Cargo.toml
admin-api/src/: auth.rs  config.rs  lib.rs  main.rs  manager.rs  session.rs
admin-api/src/api/: error.rs  mod.rs
admin-api/src/zitadel/: apps.rs  error.rs  events.rs  grants.rs  keys.rs  mod.rs  model.rs  policies.rs  project.rs  stats.rs  token.rs  users.rs
admin-api/src/zitadel/testdata/: test_rsa_priv.pem  test_rsa_pub.pem
admin-api/tests/: integration.rs
admin-web/: .dockerignore  .env.example  .gitignore  AGENTS.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml
admin-web/__tests__/: api.test.ts  application-detail-page.test.tsx  applications-page.test.tsx  apps-columns.test.tsx  columns.test.tsx  dash-layout.test.tsx  dashboard.test.tsx  data-table.test.tsx  next-config.test.ts  oidc.test.ts  operator-badge.test.tsx  shell-chrome.test.tsx  shell-nav.test.tsx  ui-primitives.test.tsx  users-page.test.tsx
admin-web/app/: globals.css  layout.tsx  providers.tsx
admin-web/app/(dash)/: layout.tsx  page.tsx
admin-web/components/applications/: columns.test.tsx  columns.tsx  role-create-dialog.tsx  sandbox-template-editor.test.tsx  sandbox-template-editor.tsx
admin-web/components/apps/: app-form-dialog.test.tsx  app-form-dialog.tsx  columns.tsx  secret-reveal-dialog.tsx
admin-web/components/audit/: columns.tsx
admin-web/components/project/: org-card.tsx  policy-card.test-d.ts  policy-card.tsx  project-card.tsx
admin-web/components/roles/: columns.tsx  create-role-dialog.tsx  holders-dialog.tsx  role-edit-dialog.tsx
admin-web/components/shell/: GlobalSearch.tsx  NavLink.tsx  NotificationBell.tsx  OperatorBadge.tsx  PageHeader.tsx  Sidebar.tsx  ThemeToggle.tsx  Topbar.tsx  nav.test.ts  nav.ts
admin-web/components/ui/: button.tsx  card.tsx  checkbox.tsx  data-table.tsx  detail-card.tsx  detail-panel.tsx  markdown.tsx  select.tsx  sonner.tsx  tooltip.tsx
admin-web/components/users/: UsersFilterPanel.tsx  access-dialog.tsx  columns.test.tsx  columns.tsx  confirm-dialog.tsx  create-user-dialog.tsx  edit-user-dialog.tsx  grants-dialog.tsx  keys-dialog.tsx  sandbox-tree.test.tsx  sandbox-tree.tsx  usage-trend.test.tsx  usage-trend.tsx
admin-web/e2e/: auth.ts  shell.spec.ts  smoke.spec.ts
admin-web/lib/: api.ts  avatar.ts  clients.test.ts  clients.ts  event-style.ts  oidc.test.ts  oidc.ts  sandbox-template.test.ts  sandbox-template.ts  sandbox-tree.test.ts  sandbox-tree.ts  session-apps.test.ts  session-apps.ts  types.project.test-d.ts  types.ts  usage-daily.test.ts  usage-daily.ts  use-filter-open.ts  use-table-density.ts  workers.ts
clients/python/: README.md  chat.py  llm_chat_client.py  llm_chat_repl.py  pyproject.toml  requirements.txt
clients/python/llm_chat/: __init__.py  __main__.py  auth.py  cli.py  config.py  errors.py  oidc.py  protocol.py  render.py  repl.py  tokens.py
clients/python/tests/: conftest.py  test_auth.py  test_cli_resolver.py  test_oidc.py  test_protocol.py  test_render.py  test_repl.py  test_tokens.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: auth.rs  cli.rs  config.rs  errors.rs  lib.rs  main.rs  oidc.rs  protocol.rs  render.rs  repl.rs  tokens.rs
clients/tauri/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
clients/tauri/src/: App.tsx  config.ts  main.tsx  styles.css
clients/tauri/src-tauri/: Cargo.toml  tauri.conf.json
clients/tauri/src-tauri/capabilities/: default.json
clients/tauri/src-tauri/src/: auth.rs  chat.rs  config.rs  lib.rs  main.rs  tokens.rs
crates/zitadel-auth/: Cargo.toml
crates/zitadel-auth/src/: lib.rs
deploy/compose/: README.md  admin-api-entrypoint.sh  admin-api.Dockerfile  admin-web.Dockerfile  entrypoint.sh  kabytech-backend-entrypoint.sh  kabytech-backend.Dockerfile  kabytech-frontend.Dockerfile  manager.Dockerfile  run-worker.ps1  test_compose_admin.py  test_dockerfiles.py  test_e2e_admin.py  test_e2e_gateway.py
deploy/compose/provisioner/: Dockerfile  README.md  new_app.py  org_rename.py  provision.py  test_provision.py  (+2 more)
deploy/manager/: README.md  llm-chat-deploy.sh  llm-chat-manager.service  manager.env.example  nginx-api.palakorn.com.conf
deploy/worker/: README.md
deploy/zitadel/: README.md  install.sh  nginx-id.palakorn.com.conf  provision_machine_user.py  zitadel.env.example  zitadel.service
docs/: architecture.md  llm-chat-interface.md  manager-interface.md  worker-interface.md
docs/integration/: kabytech-gateway.md
evidence/test001/: test-history-trace.out  test-manager-2.out  test-manager-3.out  test-manager.out
evidence/test002/: test-manager.out
kabytech/backend/: Cargo.toml
launcher/: Cargo.toml
launcher/src/: main.rs
manager/: Cargo.toml
manager/src/: auth_zitadel.rs  main.rs
scripts/: verify_self_counted.py
services/kabytech/: activate-smtp-dev.py  provision-identity-dev.py  register-dev-client.py  set-loginv2-dev.py  test-email-dev.py
services/kabytech/backend/: Cargo.toml
services/kabytech/backend/src/: auth.rs  config.rs  lib.rs  main.rs  provision.rs  session.rs  zitadel.rs
src/: claude_cli_parser.js  claude_stream.html  claude_stream.js  index.html  terminal.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
testcases/e2e/: README.md
tests/: control-full.js  distinct.js  history-trace.js  history.js  log-rotation.js  multi.js  rich-stream.js  s2-only.js  screenshot.js  three.js  ws.js
worker/: Cargo.toml  build.rs  package-lock.json  package.json  tauri.conf.json
worker/frontend/: claude_cli_parser.js  index.html
worker/src/: lib.rs  main.rs  migrate.rs  user_env.rs
(+107 files in other folders)
