[package]
name = "llm-chat-admin-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "llm_chat_admin_api"
path = "src/lib.rs"

[[bin]]
name = "llm-chat-admin-api"
path = "src/main.rs"

[dependencies]
# Shared workspace deps (root Cargo.toml [workspace.dependencies], Phase A).
# Override tokio features: the cached-token RwLock needs `sync`, and the
# startup TcpListener + axum::serve need `net` (the workspace default only
# carries rt-multi-thread + macros). Mirrors worker/Cargo.toml.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }

# Reused verbatim from the manager — JWKS verify + Principal.has("chat.admin").
zitadel-auth = { path = "../crates/zitadel-auth" }

# admin-api-specific stack (appendix §4.3).
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tower-sessions = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"
time = "0.3"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
