[package]
name = "llm-chat-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llm-chat-manager"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "io-util",
    "time",
    "process",
    "signal",
] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
subtle = "2"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
